Data Transfer modifier not showing transferred uvs in editmode (when the "on_cage" modifier option is used) #79517

Closed
opened 2020-08-04 15:01:01 +02:00 by Philipp Oeser · 9 comments
Member

System Information
Operating system: Linux-5.7.10-201.fc32.x86_64-x86_64-with-fedora-32-Thirty_Two 64 Bits
Graphics card: GeForce GTX 970M/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 440.100

Blender Version
Broken: version: 2.91.0 Alpha, branch: master, commit date: 2020-08-04 10:59, hash: d6762bedee
Worked: deaff945d0b9^
Caused by deaff945d0

Short description of error
Data Transfer modifier not showing transferred uvs in editmode (when the "on_cage" modifier option is used).
I am not entirely sure what the usage of this option is in regards to the Data Transfer modifier tbh, just pointing out that behavior changed in deaff945d0.
I think this is a bug, it should just show the transferred UVs if the show_in_editmode option is used?

Exact steps for others to reproduce the error
data_transfer_modifier_on_cage_option.blend

  • Open file
  • dst object has its UVs transferred from src object, is in editmode and has the modifiers show_in_editmode enabled
  • however, the show_on_cage modifier option is also enabled (effectively now we see the original UVs)
  • disable the show_on_cage modifier option (now showing the transferred UVs -- think this should still be the case with show_on_cage enabled?)
  • alternatively: leave editmode (this will also show the transferred UVs correctly)

Spotted while looking into #79496.

**System Information** Operating system: Linux-5.7.10-201.fc32.x86_64-x86_64-with-fedora-32-Thirty_Two 64 Bits Graphics card: GeForce GTX 970M/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 440.100 **Blender Version** Broken: version: 2.91.0 Alpha, branch: master, commit date: 2020-08-04 10:59, hash: `d6762bedee` Worked: deaff945d0b9^ Caused by deaff945d0 **Short description of error** Data Transfer modifier not showing transferred uvs in editmode (when the "on_cage" modifier option is used). I am not entirely sure what the usage of this option is in regards to the Data Transfer modifier tbh, just pointing out that behavior changed in deaff945d0. I think this is a bug, it should just show the transferred UVs if the `show_in_editmode` option is used? **Exact steps for others to reproduce the error** [data_transfer_modifier_on_cage_option.blend](https://archive.blender.org/developer/F8744596/data_transfer_modifier_on_cage_option.blend) - Open file - dst object has its UVs transferred from src object, is in editmode and has the modifiers `show_in_editmode` enabled - however, the `show_on_cage` modifier option is also enabled (effectively now we see the original UVs) - disable the `show_on_cage` modifier option (now showing the transferred UVs -- think this should still be the case with `show_on_cage` enabled?) - alternatively: leave editmode (this will also show the transferred UVs correctly) Spotted while looking into #79496.
Author
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Author
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Author
Member

Added subscribers: @mont29, @ideasman42

Added subscribers: @mont29, @ideasman42
Author
Member
CC @ideasman42 CC @mont29
Author
Member

Note: Whats really cool though [dont think this is a side-effect of deaff945d0 though] is that you can now actually see the transferred UVs in the UVEditor with show_in_editmode enabled :)

Note: Whats really cool though [dont think this is a side-effect of deaff945d0 though] is that you can now actually see the transferred UVs in the UVEditor with `show_in_editmode` enabled :)

Added subscribers: @fclem, @Jeroen-Bakker

Added subscribers: @fclem, @Jeroen-Bakker

Pffff.... Spend some hours already trying to understand what happens here, to no avail so far. Am kind of running out of ideas to check in modifier stack itself, afaict everything is fine there.

Issue happens only if DataTransfer is the only modifier in the stack it seems (any other, deforming or constructive, will 'fix' it) Only multi-modifier case still exhibiting the issue is when only 'edit' modifiers are in the stack.

So, this issue happens when both cage mesh and final mesh are the same. @fclem @Jeroen-Bakker I see quite some drawing code that checks if those two are identical, so wondering if the problem is not in the logic there actually? Or could it be caused by those final mesh still having the edit_bmesh data?

Pffff.... Spend some hours already trying to understand what happens here, to no avail so far. Am kind of running out of ideas to check in modifier stack itself, afaict everything is fine there. Issue happens only if DataTransfer is the only modifier in the stack it seems (any other, deforming or constructive, will 'fix' it) Only multi-modifier case still exhibiting the issue is when only 'edit' modifiers are in the stack. So, this issue happens when both cage mesh and final mesh are the same. @fclem @Jeroen-Bakker I see quite some drawing code that checks if those two are identical, so wondering if the problem is not in the logic there actually? Or could it be caused by those final mesh still having the edit_bmesh data?
Campbell Barton self-assigned this 2020-08-11 12:24:55 +02:00

This issue was referenced by 18c9f7ef72

This issue was referenced by 18c9f7ef72a41210208e5fa914e22bdb848e465f

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Thomas Dinges added this to the 2.90 milestone 2023-02-08 16:25:42 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#79517
No description provided.