Fix T79517: Data Transfer modifier fails in edit-mode