source/blender/modifiers/intern/MOD_uvproject.c
@@ -308,6 +308,8 @@ static Mesh *uvprojectModifier_do(UVProjectModifierData *umd,
     }
   }
 
+  mesh->runtime.is_original = false;
+
   /* Mark tessellated CD layers as dirty. */
   mesh->runtime.cd_dirty_vert |= CD_MASK_TESSLOOPNORMAL;
 
